# route-puzzle-zk

./: .gitignore  Anchor.toml  asset-manifest.json  index.html  manifest.json
.github/workflows/: jekyll-gh-pages.yml
app/: config-overrides.js  package.json  webpack.config.js
app/circuits/analyze_move/: analyze_move.circom  analyze_move_0000.zkey  verification_key.json
app/circuits/analyze_move/analyze_move_js/: analyze_move.wasm
app/circuits/init/: init.circom  init_0000.zkey  verification_key.json
app/circuits/reveal_pos/: reveal.circom
app/public/: index.html
app/src/: App.css  App.tsx  Home.tsx
app/src/components/phaser/: index.ts
app/src/components/solana/: phantom.ts  util.ts
app/src/components/ui/: Airdrop.tsx  Choose.tsx  Game.tsx  InitGame.tsx  JoinGame.tsx  SetupContract.tsx  Wallet.tsx  style.css
app/src/contract/: data.ts  ff.js  groth.ts  helper.ts  instruction.ts  transaction.ts
app/src/contract/instruction/: forfeit.ts  (+5 more)
app/src/utils/: common.ts
programs/zkcontract2/: Cargo.toml
programs/zkcontract2/src/: error.rs  lib.rs  state.rs  util.rs
programs/zkcontract2/tests/: test.rs
route-puzzle-zk/zk/: analyze_move_0001.zkey
static/css/: main.9d5615cf.css  main.9d5615cf.css.map  main.cd646d27.css  main.cd646d27.css.map
static/js/: 651.a19f6ef4.chunk.js  651.a19f6ef4.chunk.js.map  902.c5875df5.chunk.js  902.c5875df5.chunk.js.map  main.0b448465.js  main.412a6597.js  main.686286cd.js  main.686286cd.js.LICENSE.txt  main.6de1900b.js  main.b6d44e78.js  main.d96e0dda.js
tests/: zkcontract2.ts
zk/: init.wasm  init_0001.zkey
(+2 files in other folders)
