[package]
name = "zkcontract2"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zkcontract2"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
ark-ff = { version = "^0.3.0", default-features = false }
ark-ec = { version = "0.3.0" }
ark-bn254 = "0.3.0"
ark-std = { version = "^0.3.0", default-features = false }
groth16-solana = "0.0.2"
thiserror = "1.0.46"

